style: improve text decoration consistency and contrast (fix:https://github.com/mustakshif/Asri/issues/96)
- Update text decoration color for URLs and references to use theme primary light
- Adjust text-decoration-thickness to use a consistent variable
- Remove hover effect for text-decoration-color on light theme
- Update text decoration for menu labels and reference cells
- Modify underline thickness for draft subtype

--- a/style/typography/database.scss
+++ b/style/typography/database.scss
@@ -219,14 +219,18 @@
                 .av__celltext--url,
                 .av__celltext--ref {
                     border-bottom: none;
-                    text-decoration: underline var(--b3-border-color-trans);
-                    text-decoration-thickness: 0.1em;
+                    text-decoration: underline var(--b3-theme-primary-light);
+                    text-decoration-thickness: $text-underline-thickness;
 
                     transition-property: color, text-decoration-color;
                     transition-duration: .2s;
 
+                    @include darkmode-counterpart {
+                        text-decoration-color: var(--b3-theme-primary);
+                    }
+
                     &:hover {
-                        text-decoration-color: var(--b3-theme-primary-lighter);
+                        // text-decoration-color: var(--b3-theme-primary-lighter);
                         color: var(--b3-theme-primary);
 
                         .ft__on-surface {
@@ -546,7 +550,7 @@ img.av__cellassetimg {
         .b3-menu__label.popover__block {
             color: var(--b3-theme-primary) !important;
             text-decoration: underline transparent;
-            text-decoration-thickness: .1em;
+            text-decoration-thickness: $text-underline-thickness;
         }
 
         &.b3-menu__item--current,
@@ -640,7 +644,7 @@ img.av__cellassetimg {
         .av__celltext--ref {
             border-bottom: none;
             text-decoration: underline var(--b3-border-color-trans);
-            text-decoration-thickness: 0.1em;
+            text-decoration-thickness: $text-underline-thickness;
         }
     }
 }
